--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,14 @@
 {
-    "manifest_version": 3,
-    "version": "4.0.0.9",
+	"manifest_version": 3,
+	"version": "4.0.0.9",
 	"version_name": "Pre-Release v4",
 
 	"author": "Ameer!",
-    "name": "Roblokis",
-    "description": "__MSG_extDesc__",
-    "default_locale": "en",
-
-    "options_page": "html/Popup/Popup.html",
-    "homepage_url": "https://ameerdotexe.github.io/roblokis/",
+	"name": "Roblokis",
+	"description": "__MSG_extDesc__",
+	"default_locale": "en",
+	"options_page": "html/Popup/Popup.html",
+	"homepage_url": "https://ameerdotexe.github.io/roblokis/",
 	"incognito": "split",
 
 	"host_permissions": [
@@ -21,59 +20,76 @@
 		"https://*/*.svg",
 		"https://*/*.bmp"
 	],
+
+	"background": {
+		"service_worker": "Background.js"
+	},
+	"web_accessible_resources": [
+		{
+			"resources": [
+				"*.*"
+			],
+			"matches": [
+				"*://*.roblox.com/*"
+			],
+			"extension_ids": []
+		}
+	],
+	"icons": {
+		"300": "/images/icons/icon_300x300.png"
+	},
+	"action": {
+		"default_popup": "html/Popup/Popup.html",
+		"default_icon": {
+			"300": "/images/icons/icon_300x300.png"
+		},
+		"default_title": "Roblokis"
+	},
 	
-    "background": {
-        "service_worker": "Background.js"
-    },
-
-    "web_accessible_resources": [ {
-        "resources": ["*.*"],
-        "matches": ["*://*.roblox.com/*"],
-        "extension_ids": []
-    } ],
-    "icons": {
-        "300": "/images/icons/icon_300x300.png"
-    },
-    "action": {
-        "default_popup": "html/Popup/Popup.html",
-        "default_icon": {
-            "300": "/images/icons/icon_300x300.png"
-        },
-        "default_title": "Roblokis"
-    },
-    "content_scripts": [
-        {
-            "matches": [ "*://*.roblox.com/*" ],
-            "js": [
-                "js/Main/Utility.js",
-                "js/Main/General.js",
-                "js/Theme/ThemeLoader.js",
-
+	"content_scripts": [
+		{
+			"matches": [
+				"*://*.roblox.com/*"
+			],
+			"js": [
+				"js/Main/Utility.js",
+				"js/Main/General.js",
+				"js/Theme/ThemeLoader.js",
 				"js/Pages/all.js"
-            ],
-            "run_at": "document_start"
-        },
-        {
-            "matches": [ "*://*.roblox.com/users/*" ],
-            "js": [ "js/Pages/user.js" ],
-            "run_at": "document_start"
-        },
-        {
-            "matches": [ "*://*.roblox.com/games/*" ],
-            "js": [ "js/Pages/game.js" ],
-            "run_at": "document_start"
-        },
-        {
-            "matches": [ "*://*.roblox.com/roblokis*" ],
-            "js": [ 
-                "html/SettingsPage/SettingsPage.js",
-                "html/SettingsPage/Pages/Main/designer.js",
-                "html/SettingsPage/Pages/GamePage/servers.js"
-            ],
-            "css": [
-                "html/SettingsPage/SettingsPage.css"
-            ],
-            "run_at": "document_start"
-        }
-    ]
+			],
+			"run_at": "document_start"
+		},
+		{
+			"matches": [
+				"*://*.roblox.com/users/*"
+			],
+			"js": [
+				"js/Pages/user.js"
+			],
+			"run_at": "document_start"
+		},
+		{
+			"matches": [
+				"*://*.roblox.com/games/*"
+			],
+			"js": [
+				"js/Pages/game.js"
+			],
+			"run_at": "document_start"
+		},
+		{
+			"matches": [
+				"*://*.roblox.com/roblokis*"
+			],
+			"js": [
+				"html/SettingsPage/SettingsPage.js",
+				"html/SettingsPage/Pages/Main/designer.js",
+				"html/SettingsPage/Pages/GamePage/servers.js"
+			],
+			"css": [
+				"html/SettingsPage/SettingsPage.css"
+			],
+			"run_at": "document_start"
+		}
+	]
 }
