--- a/roblokis/manifest.json
+++ b/roblokis/manifest.json
@@ -11,7 +11,8 @@
 	"homepage_url": "https://ameerdotexe.github.io/roblokis/",
 	"incognito": "split",
 	"permissions": [
-		"storage"
+		"storage",
+		"contextMenus"
 	],
 
 	"host_permissions": [
