removed links and added file upload

--- a/roblokis/manifest.firefox.json
+++ b/roblokis/manifest.firefox.json
@@ -9,6 +9,7 @@
 	"homepage_url": "https://ameerdotexe.github.io/roblokis/",
 	"permissions": [
 		"storage",
+		"unlimitedStorage",
 		"contextMenus",
 		"https://*/*.png",
 		"https://*/*.jpg",
