--- a/roblokis/manifest.firefox.json
+++ b/roblokis/manifest.firefox.json
@@ -1,6 +1,6 @@
 {
 	"manifest_version": 2,
-	"version": "4.1.0.3",
+	"version": "4.2.0.0",
 
 	"author": "Ameer!",
 	"name": "Roblokis",
@@ -45,6 +45,7 @@
 			"js": [
 				"js/Main/Utility.js",
 				"js/Main/General.js",
+				"js/Theme/ThemeEditor.js",
 				"js/Theme/ThemeLoader.js",
 				"js/Pages/all.js"
 			],
